context paths are added...end points

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,1 +1,5 @@
 app.name=TEST
+management.endpoints.enabled-by-default=true
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=env,beans
+debug=true
