--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,4 +2,12 @@ app.name=TEST
 management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.exclude=env,beans
-debug=true
+debug=false
+
+
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+logging.file=application.log
+
+
