--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 app.name=DEV
 management.endpoints.enabled-by-default=false
-debug=true
+debug=false
 server.servlet.context-path=/myapp
+logging.file=application.log
